cmake_minimum_required(VERSION 3.21)
project(Signals_Slots)

set(CMAKE_CXX_STANDARD 14)

#add_executable(Signals_Slots main.cpp NativeSignal.cpp )

#add_executable(scratch /home/edward/.config/JetBrains/CLion2021.3/scratches/scratch.cpp)
add_executable(scratch_1 /home/edward/.config/JetBrains/CLion2021.3/scratches/scratch_1.cpp)
#add_executable(scratch_2 /home/edward/.config/JetBrains/CLion2021.3/scratches/scratch_2.cpp)

#target_link_libraries(scratch pthread)